--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -327,14 +327,7 @@ msgstr ""
 
 #. type: multicols
 #: campaigns/inferno_deal_with_the_devil.tex:40
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Few Magogs\n"
-#| "  \\item A Pack of Familiars\n"
-#| "  \\item A Pack of Cerebri\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Few'' Magogs\n"
@@ -344,9 +337,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Un Groupe de Magogs\n"
-"  \\item Un Groupe de Familiers\n"
-"  \\item Un Groupe de Cerbères\n"
+"  \\item Un «Groupe» de Magogs\n"
+"  \\item Un «Groupe» de Familiers\n"
+"  \\item Un «Groupe» de Cerbères\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -876,39 +869,7 @@ msgstr ""
 
 #. type: table*
 #: campaigns/inferno_deal_with_the_devil.tex:267
-#, fuzzy, no-wrap
-#| msgid ""
-#| "[!hb]\n"
-#| "  \\pagetarget{Steadwick's Fall AI}{}\n"
-#| "  \\hommtable[]{37.5}{\n"
-#| "    \\centering\n"
-#| "    \\medskip\n"
-#| "    \\textbf{AI Hero Setup}\\\\\n"
-#| "    \\medskip\n"
-#| "    \\begin{tabularx}{0.95\\linewidth}{>{\\centering}p{0.12\\linewidth}>{\\raggedright\\arraybackslash}p{0.25\\linewidth}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}p{0.28\\linewidth}}\n"
-#| "      \\darkcell{Enemy} & \\darkcell{Units} & \\darkcell{AI Deck} & \\darkcell{Artifacts/Abilities} \\\\\n"
-#| "      \\darkcellleft[2.8]{Rampart Charging Army \\#1}\n"
-#| "      & \\lightcellleft[2.8]{Few Unicorns\\\\Pack of Pegasi\\\\Pack of Elves\\\\Pack of Dwarves\\\\Few Centaurs}\n"
-#| "      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Might \\svg[12]{might-yellow} Card\\\\2~×~Skill \\svg{skill-yellow} Card \\\\\\phantom{.}\\\\ \\textit{Armies use the same Deck. Reshuffle after every Combat.}}}}\n"
-#| "      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Shield~of~the Damned \\textit{(Top effect)}\\\\1~×~Sword~of~Hellfire \\textit{(Top effect)}\\\\\\phantom{.}\\\\ \\textit{Armies use the same Deck. Reshuffle after every Combat.}}}} \\\\\n"
-#| "      \\darkcellleft[2.8]{Castle Charging Army \\#1}\n"
-#| "      & \\lightcellleft[2.8]{Few Champions\\\\Pack of Zealots\\\\Pack of Griffins\\\\Pack of Elves\\\\Pack of Marksmen}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[2.8]{Rampart Charging Army \\#2}\n"
-#| "      & \\lightcellleft[2.8]{Pack of Unicorns\\\\Pack of Dendroids\\\\Few Pegasi\\\\Pack of Elves\\\\Pack of Dwarves}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[2.8]{Castle Charging Army \\#2}\n"
-#| "      & \\lightcellleft[2.8]{Pack of Champions\\\\Pack of Zealots\\\\Few Crusaders\\\\Few Griffins\\\\Pack of Halberdiers}\n"
-#| "      &\n"
-#| "      & \\\\\n"
-#| "      \\darkcellleft[4.4]{Final Charging Army}\n"
-#| "      & \\lightcellleft[4.4]{Few Archangels\\\\Pack of Unicorns\\\\Pack of Champions\\\\Pack of Zealots\\\\Pack of Griffins\\\\Ballista War Machine}\n"
-#| "      & \\lightcellleft[4.4]{3~×~Might \\svg[12]{might-yellow} Card\\\\3~×~Skill \\svg{skill-yellow} Card}\n"
-#| "    & \\lightcellleft[4.4]{1~×~Shield~of~the Damned \\textit{(Top effect)}\\\\1~×~Sword~of~Hellfire \\textit{(Top effect)}\\\\1~×~Ballistics \\textit{(Basic effect)}\\\\1~×~First~Aid \\textit{(Expert effect)}} \\\\ \\end{tabularx}\n"
-#| "  }\n"
-#| "\\vspace*{-5em}"
+#, no-wrap
 msgid ""
 "[!hb]\n"
 "  \\pagetarget{Steadwick's Fall AI}{}\n"
@@ -953,8 +914,8 @@ msgstr ""
 "      \\darkcell{Ennemi} & \\darkcell{Unités} & \\darkcell{Deck IA} & \\darkcell{Artefacts/Compétences} \\\\\n"
 "      \\darkcellleft[2.8]{Armée Rempart Attaquante \\#1}\n"
 "      & \\lightcellleft[2.8]{Quelques Licornes\\\\Groupe Pégases\\\\Groupe Elfes\\\\Groupe Nains\\\\Quelques Centaures}\n"
-"      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\2~×~Cartes Capacité \\svg{skill-yellow} \\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le même Deck. Remélangez après chaque Combat.}}}}\n"
-"      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le même Deck. Remélangez après chaque Combat.}}}} \\\\\n"
+"      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\2~×~Cartes Capacité~\\svg{skill-yellow} \\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le!même Deck. Remélangez après chaque Combat.}}}}\n"
+"      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le!même Deck. Remélangez après chaque Combat.}}}} \\\\\n"
 "      \\darkcellleft[2.8]{Armée Château Attaquante \\#1}\n"
 "      & \\lightcellleft[2.8]{Quelques Champions\\\\Groupe Zélotes\\\\Groupe Griffons\\\\Groupe Elfes\\\\Groupe Arbalétriers}\n"
 "      &\n"
@@ -969,7 +930,7 @@ msgstr ""
 "      & \\\\\n"
 "      \\darkcellleft[4.4]{Armée Finale Attaquante}\n"
 "      & \\lightcellleft[4.4]{Quelques Archanges\\\\Groupe Licornes\\\\Groupe Champions\\\\Groupe Zélotes\\\\Groupe Griffons\\\\Machine de Guerre Baliste}\n"
-"      & \\lightcellleft[4.4]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\3~×~Cartes Capacité \\svg{skill-yellow}}\n"
+"      & \\lightcellleft[4.4]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\3~×~Cartes Capacité~\\svg{skill-yellow}}\n"
 "    & \\lightcellleft[4.4]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\1~×~Balistique \\textit{(Effet Basique)}\\\\1~×~Médecine \\textit{(Effet Expert)}} \\\\ \\end{tabularx}\n"
 "  }\n"
 "\\vspace*{-5em}"
