--- a/translations/inferno_devilish_plan.tex/fr.po
+++ b/translations/inferno_devilish_plan.tex/fr.po
@@ -341,13 +341,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:39
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Pack of Familiars\n"
-#| "  \\item A Few Magogs\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Pack'' of Familiars\n"
@@ -356,8 +350,8 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Groupe Familiers.\n"
-"  \\item Quelques Magogs.\n"
+"  \\item «Groupe» Familiers.\n"
+"  \\item «Quelques» Magogs.\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -383,19 +377,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:61
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Gold Dragons Army (Rampart):}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item A Pack of Gold Dragons\n"
-#| "      \\item A Pack of Unicorns\n"
-#| "      \\item A Pack of Dendroids\n"
-#| "      \\item A Pack of Centaurs\n"
-#| "    \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Gold Dragons Army (Rampart):}\n"
 "\\begin{itemize}\n"
@@ -413,39 +395,17 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armée:}\n"
 "    \\begin{itemize}\n"
-"      \\item Un Groupe de Dragons d'Or\n"
-"      \\item Un Groupe de Licornes\n"
-"      \\item Un Groupe de Sylvaniens\n"
-"      \\item Un Groupe de Centaures\n"
+"      \\item Un «Groupe» de Dragons d'Or\n"
+"      \\item Un «Groupe» de Licornes\n"
+"      \\item Un «Groupe» de Sylvaniens\n"
+"      \\item Un «Groupe» de Centaures\n"
 "    \\end{itemize}\n"
 "\\end{itemize}\n"
 "\n"
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:82
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Ivor (Rampart):}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item A Few Elves\n"
-#| "      \\item Neutral Army at the same Level as your Hero\\footnote{See page 35, ``Field Difficulty Level Table'' in the Core Rulebook, for further details on the number of Neutral Units you have to draw for this Neutral Army.}\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{AI Deck:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item 1 × Might \\svg[12]{might} Card\n"
-#| "      \\item 2 × Magic \\svg{magic} Card\n"
-#| "      \\item 1 × Skill \\svg{skill} Card\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{Spells:}\n"
-#| "    \\begin{itemize}\n"
-#| "      \\item 1 × Precision\\footnote{It resolves on the first \\svg{unit_ranged} Unit able to make a \\svg{unit_ranged} attack}\n"
-#| "      \\item 1 × Magic Arrow\n"
-#| "    \\end{itemize}\n"
-#| "  \\item \\textbf{Abilities:} Archery (always Basic effect)\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Ivor (Rampart):}\n"
 "\\begin{itemize}\n"
@@ -473,7 +433,7 @@ msgstr ""
 "\\begin{itemize}\n"
 "  \\item \\textbf{Armée:}\n"
 "    \\begin{itemize}\n"
-"      \\item Quelques Elfes\n"
+"      \\item «Quelques» Elfes\n"
 "      \\item Armée Neutre de même Niveau que votre Héros\\footnote{Voir page 35, «Table de Difficulté des Cases» du Livre de Règle, pour plus de détails sur le nombre d'Unités d'Armée Neutres à piocher.}\n"
 "    \\end{itemize}\n"
 "  \\item \\textbf{Deck IA:}\n"
@@ -696,14 +656,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_devilish_plan.tex:156
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{\\nth{9} Round:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Reinforce the Few Elves in Ivor's army to a Pack of Elves.\n"
-#| "  \\item Add an Ammo Cart to Ivor's Army.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{\\nth{9} Round:}\n"
 "\\begin{itemize}\n"
@@ -714,7 +667,7 @@ msgid ""
 msgstr ""
 "\\textbf{Manche 9:}\n"
 "\\begin{itemize}\n"
-"  \\item Améliorez les Quelques Elfes de l'Armée d'Ivor en Groupe.\n"
+"  \\item Améliorez les «Quelques» Elfes de l'Armée d'Ivor en «Groupe».\n"
 "  \\item Ajoutez un Chariot de Munition à l'Armée d'Ivor.\n"
 "\\end{itemize}\n"
 "\n"
