--- a/translations/inferno_steadwicks_fall.tex/fr.po
+++ b/translations/inferno_steadwicks_fall.tex/fr.po
@@ -314,14 +314,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:36
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\begin{itemize}\n"
-#| "  \\item A Few Troglodytes\n"
-#| "  \\item A Few Evil Eyes\n"
-#| "  \\item A Pack of Familiars\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\begin{itemize}\n"
 "  \\item A ``Few'' Troglodytes\n"
@@ -331,9 +324,9 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Quelques Troglodytes\n"
-"  \\item Quelques Yeux Démoniaques\n"
-"  \\item Un Groupe de Familiers\n"
+"  \\item «Quelques» Troglodytes\n"
+"  \\item «Quelques» Yeux Démoniaques\n"
+"  \\item Un «Groupe» de Familiers\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -349,16 +342,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:46
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Bonus:} Choose one of the following options:\n"
-#| "\\begin{itemize}\n"
-#| "  \\item Add a Pack of Harpies to your hand.\n"
-#| "  \\item Add a Pack of Magogs to your hand.\n"
-#| "  \\item Add an Ammo Cart to your hand.\n"
-#| "  \\item Search (4) the Spell Deck.\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Bonus:} Choose one of the following options:\n"
 "\\begin{itemize}\n"
@@ -371,8 +355,8 @@ msgid ""
 msgstr ""
 "\\textbf{Bonus:} Choisissez une des options:\n"
 "\\begin{itemize}\n"
-"  \\item Ajoutez un Groupe de Harpies.\n"
-"  \\item Ajoutez un Groupe de Magogs.\n"
+"  \\item Ajoutez un «Groupe» de Harpies.\n"
+"  \\item Ajoutez un «Groupe» de Magogs.\n"
 "  \\item Ajoutez un Chariot de Munitions.\n"
 "  \\item Fouillez (4) le Deck de Sort.\n"
 "\\end{itemize}\n"
@@ -380,35 +364,7 @@ msgstr ""
 
 #. type: multicols*
 #: campaigns/inferno_steadwicks_fall.tex:75
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{General Kendal (Castle):}\n"
-#| "\\begin{itemize}\n"
-#| "    \\item \\textbf{Army:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item A Pack of Archangels\n"
-#| "        \\item A Pack of Champions\n"
-#| "        \\item A Pack of Zealots\n"
-#| "        \\item A Pack of Crusaders\n"
-#| "        \\item A Pack of Griffins\n"
-#| "        \\item A Balista War Machine\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{AI Deck:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item 5 × Might \\svg[12]{might} Card\n"
-#| "        \\item 1 × Magic \\svg{magic} Card\n"
-#| "        \\item 3 × Skill \\svg{skill} Card\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{Spells:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item 2 × Haste\n"
-#| "    \\end{itemize}\n"
-#| "    \\item \\textbf{Abilities:}\n"
-#| "    \\begin{itemize}\n"
-#| "        \\item Artillery\\footnote{For General Kendal, the Artillery Ability Card always resolves the Expert effect and the Ballista War Machine Activates every time the Artillery Ability Card is drawn, as well as at the beginning of a Combat Round.}\n"
-#| "    \\end{itemize}\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{General Kendal (Castle):}\n"
 "\\begin{itemize}\n"
@@ -443,11 +399,11 @@ msgstr ""
 "\\begin{itemize}\n"
 "    \\item \\textbf{Armée:}\n"
 "    \\begin{itemize}\n"
-"        \\item Un Groupe d'Archanges\n"
-"        \\item Un Groupe de Champions\n"
-"        \\item Un Groupe de Zélotes\n"
-"        \\item Un Groupe de Paladins\n"
-"        \\item Un Groupe de Griffons\n"
+"        \\item Un «Groupe» d'Archanges\n"
+"        \\item Un «Groupe» de Champions\n"
+"        \\item Un «Groupe» de Zélotes\n"
+"        \\item Un «Groupe» de Paladins\n"
+"        \\item Un «Groupe» de Griffons\n"
 "        \\item Une Machine de Guerre Baliste\n"
 "    \\end{itemize}\n"
 "    \\item \\textbf{Deck IA:}\n"
