--- a/translations/random_scenario.tex/fr.po
+++ b/translations/random_scenario.tex/fr.po
@@ -565,43 +565,7 @@ msgstr ""
 
 #. type: table*
 #: sections/random_scenario.tex:273
-#, fuzzy, no-wrap
-#| msgid ""
-#| "  \\hommtable[]{27}{\n"
-#| "    \\centering\n"
-#| "    \\medskip\n"
-#| "    \\textbf{Starting Conditions}\\\\\n"
-#| "    \\bigskip\n"
-#| "\n"
-#| "    \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Stingy} & \\darkcell{Fair} & \\darkcell{Generous}\\\\\n"
-#| "    \\darkcell[1.4]{Army}\n"
-#| "      & \\lightcellleft[1.4]{2 × Few cheapest \\svg[12]{bronze} Units}\n"
-#| "      & \\lightcellleft[1.4]{Pack of cheap \\svg[12]{bronze} Units \\linebreak Few chosen \\svg[12]{bronze} Units}\n"
-#| "      & \\lightcellleft[1.4]{Pack of chosen \\svg[12]{bronze} Units \\linebreak Few cheap \\svg[12]{silver} Units}\\\\\n"
-#| "    \\darkcell[1.4]{Starting Resources}\n"
-#| "      & \\lightcellleft[1.4]{10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}}\n"
-#| "      & \\lightcellleft[1.4]{16 \\svg{gold}, 5 \\svg{building_materials}, 1 \\svg{valuables}}\n"
-#| "      & \\lightcellleft[1.4]{20 \\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}}\\\\\n"
-#| "    \\end{tabularx}\n"
-#| "\n"
-#| "    \\bigskip\n"
-#| "    {\\color{\\iftoggle{noartbackground}{black}{darkyellow}}\\rule{\\textwidth}{0.5pt}}\n"
-#| "\n"
-#| "    \\vspace*{1em}\n"
-#| "    \\textbf{Town Strength}\\\\\n"
-#| "    \\bigskip\n"
-#| "\n"
-#| "    \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}XXXX} & \\darkcell{Settlement} & \\darkcell{City} & \\darkcell{Capitol}\\\\\n"
-#| "    \\darkcell[1.4]{Starting Income}\n"
-#| "      & \\lightcellleft[1.4]{10 \\svg{gold}, 0 \\svg{building_materials}, 0 \\svg{valuables}}\n"
-#| "      & \\lightcellleft[1.4]{15 \\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}}\n"
-#| "      & \\lightcellleft[1.4]{20 \\svg{gold}, 2 \\svg{building_materials}, 1 \\svg{valuables}}\\\\\n"
-#| "    \\darkcell[2.0]{Town Buildings}\n"
-#| "      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling}\n"
-#| "      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling \\linebreak City Hall}\n"
-#| "      & \\lightcellleft[2.0]{\\svg[12]{bronze} Dwelling \\linebreak City Hall \\linebreak Citadel}\\\\\n"
-#| "    \\end{tabularx}\n"
-#| "  }"
+#, no-wrap
 msgid ""
 "  \\hommtable[]{27}{\n"
 "    \\centering\n"
@@ -647,9 +611,9 @@ msgstr ""
 "\n"
 "    \\begin{tabularx}{0.99\\linewidth}{p{0.14\\linewidth}XXXX} & \\darkcell{Avare} & \\darkcell{Honnête} & \\darkcell{Généreux}\\\\\n"
 "    \\darkcell[2.4]{Armée}\n"
-"      & \\lightcellleft[2.4]{2 × Unités Quelques \\svg[12]{bronze} les moins chers}\n"
-"      & \\lightcellleft[2.4]{Unité Groupe \\svg[12]{bronze} la moins cher \\linebreak Unité Quelques \\svg[12]{bronze} au choix}\n"
-"      & \\lightcellleft[2.4]{Unité Groupe \\svg[12]{bronze} au choix \\linebreak Unité Quelques \\svg[12]{silver} la moins cher}\\\\\n"
+"      & \\lightcellleft[2.4]{2 × Unités «Quelques» \\svg[12]{bronze} les moins chers}\n"
+"      & \\lightcellleft[2.4]{Unité «Groupe» \\svg[12]{bronze} la moins cher \\linebreak Unité «Quelques» \\svg[12]{bronze} au choix}\n"
+"      & \\lightcellleft[2.4]{Unité «Groupe» \\svg[12]{bronze} au choix \\linebreak Unité «Quelques» \\svg[12]{silver} la moins cher}\\\\\n"
 "    \\darkcell[1.4]{Ressources de Départ}\n"
 "      & \\lightcellleft[1.4]{10 \\svg{gold}, 3 \\svg{building_materials}, 1 \\svg{valuables}}\n"
 "      & \\lightcellleft[1.4]{16 \\svg{gold}, 5 \\svg{building_materials}, 1 \\svg{valuables}}\n"
