[FR] Review fixes

--- a/translations/bloody_grail.tex/fr.po
+++ b/translations/bloody_grail.tex/fr.po
@@ -55,7 +55,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item «Groupe» d'unités \\svg{bronze} les moins chères\n"
 "  \\item «Quelques» unités \\svg{bronze} les plus chères\n"
