--- a/translations/force_of_will.tex/fr.po
+++ b/translations/force_of_will.tex/fr.po
@@ -225,9 +225,9 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
-"  \\item 2 × Unités «Quelques» \\svg{bronze}\n"
+"  \\item 2 × Unités «Quelques» \\svg{bronze} les moins chères\n"
 "\\end{itemize}\n"
 "\n"
 
