--- a/translations/inferno_deal_with_the_devil.tex/fr.po
+++ b/translations/inferno_deal_with_the_devil.tex/fr.po
@@ -337,7 +337,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\begin{itemize}\n"
-"  \\item Un «Groupe» de Magogs\n"
+"  \\item Un «Quelques» de Magogs\n"
 "  \\item Un «Groupe» de Familiers\n"
 "  \\item Un «Groupe» de Cerbères\n"
 "\\end{itemize}\n"
@@ -910,26 +910,26 @@ msgstr ""
 "    \\medskip\n"
 "    \\textbf{Préparation Héros IA}\\\\\n"
 "    \\medskip\n"
-"    \\begin{tabularx}{0.95\\linewidth}{>{\\centering}p{0.12\\linewidth}>{\\raggedright\\arraybackslash}p{0.25\\linewidth}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}p{0.28\\linewidth}}\n"
+"    \\begin{tabularx}{0.95\\linewidth}{>{\\centering}p{0.12\\linewidth}>{\\raggedright\\arraybackslash}p{0.27\\linewidth}>{\\centering\\arraybackslash}X>{\\centering\\arraybackslash}p{0.27\\linewidth}}\n"
 "      \\darkcell{Ennemi} & \\darkcell{Unités} & \\darkcell{Deck IA} & \\darkcell{Artefacts/Compétences} \\\\\n"
 "      \\darkcellleft[2.8]{Armée Rempart Attaquante \\#1}\n"
-"      & \\lightcellleft[2.8]{Quelques Licornes\\\\Groupe Pégases\\\\Groupe Elfes\\\\Groupe Nains\\\\Quelques Centaures}\n"
-"      & \\makebox[129pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\2~×~Cartes Capacité~\\svg{skill-yellow} \\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le!même Deck. Remélangez après chaque Combat.}}}}\n"
-"      & \\makebox[147pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le!même Deck. Remélangez après chaque Combat.}}}} \\\\\n"
+"      & \\lightcellleft[2.8]{«Quelques» Licornes\\\\«Groupe» Pégases\\\\«Groupe» Elfes\\\\«Groupe» Nains\\\\«Quelques» Centaures}\n"
+"      & \\makebox[124pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\2~×~Cartes Capacité~\\svg{skill-yellow} \\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le~même Deck. Remélangez après chaque Combat.}}}}\n"
+"      & \\makebox[143pt][r]{\\multirow{4}{*}[12.65ex]{\\lightcellleft[11.75]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\\\phantom{.}\\\\ \\textit{Les Armées utilisent le~même Deck. Remélangez après chaque Combat.}}}} \\\\\n"
 "      \\darkcellleft[2.8]{Armée Château Attaquante \\#1}\n"
-"      & \\lightcellleft[2.8]{Quelques Champions\\\\Groupe Zélotes\\\\Groupe Griffons\\\\Groupe Elfes\\\\Groupe Arbalétriers}\n"
+"      & \\lightcellleft[2.8]{«Quelques» Champions\\\\«Groupe» Zélotes\\\\«Groupe» Griffons\\\\«Groupe» Elfes\\\\«Groupe» Arbalétriers}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[2.8]{Armée Rempart Attaquante \\#2}\n"
-"      & \\lightcellleft[2.8]{Groupe Licornes\\\\Groupe Sylvaniens\\\\Quelques Pégases\\\\Groupe Elfes\\\\Groupe Nains}\n"
+"      & \\lightcellleft[2.8]{«Groupe» Licornes\\\\«Groupe» Sylvaniens\\\\«Quelques» Pégases\\\\«Groupe» Elfes\\\\«Groupe» Nains}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[2.8]{Armée Château Attaquante \\#2}\n"
-"      & \\lightcellleft[2.8]{Groupe Champions\\\\Groupe Zélotes\\\\Quelques Paladins\\\\Quelques Griffons\\\\Groupe Hallebardiers}\n"
+"      & \\lightcellleft[2.8]{«Groupe» Champions\\\\«Groupe» Zélotes\\\\«Quelques» Paladins\\\\«Quelques» Griffons\\\\«Groupe» Hallebardiers}\n"
 "      &\n"
 "      & \\\\\n"
 "      \\darkcellleft[4.4]{Armée Finale Attaquante}\n"
-"      & \\lightcellleft[4.4]{Quelques Archanges\\\\Groupe Licornes\\\\Groupe Champions\\\\Groupe Zélotes\\\\Groupe Griffons\\\\Machine de Guerre Baliste}\n"
+"      & \\lightcellleft[4.4]{«Quelques» Archanges\\\\«Groupe» Licornes\\\\«Groupe» Champions\\\\«Groupe» Zélotes\\\\«Groupe» Griffons\\\\Machine de Guerre Baliste}\n"
 "      & \\lightcellleft[4.4]{3~×~Cartes Force \\svg[12]{might-yellow}\\\\3~×~Cartes Capacité~\\svg{skill-yellow}}\n"
 "    & \\lightcellleft[4.4]{1~×~Écu des Ténèbres \\textit{(Effet Haut)}\\\\1~×~Lame Ardente \\textit{(Effet Haut)}\\\\1~×~Balistique \\textit{(Effet Basique)}\\\\1~×~Médecine \\textit{(Effet Expert)}} \\\\ \\end{tabularx}\n"
 "  }\n"
