--- a/translations/titans_stronghold.tex/fr.po
+++ b/translations/titans_stronghold.tex/fr.po
@@ -264,7 +264,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item «Groupe» d'unités \\svg{bronze} choisies\n"
 "  \\item «Quelques» unités \\svg{bronze} choisies\n"
