--- a/translations/trial_by_combat.tex/fr.po
+++ b/translations/trial_by_combat.tex/fr.po
@@ -133,7 +133,7 @@ msgid ""
 msgstr ""
 "\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
-"  \\item Une Unité \\svg{silver}\\ avec le coût de Recrutement le plus faible.\n"
+"  \\item Une Unité «Quelques» \\svg{silver}\\ avec le coût de Recrutement le plus faible.\n"
 "  \\item Une Unité Neutre \\svg{bronze} de sa Faction.\n"
 "\\end{itemize}\n"
 "\n"
