--- a/translations/stand_united.tex/fr.po
+++ b/translations/stand_united.tex/fr.po
@@ -280,7 +280,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item «Quelques» unités \\svg{bronze} les moins chères\n"
 "  \\item «Quelques» unités \\svg{silver} les moins chères\n"
