--- a/translations/the_fractured_kingdoms.tex/fr.po
+++ b/translations/the_fractured_kingdoms.tex/fr.po
@@ -198,7 +198,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Unités de départ :}\n"
+"\\textbf{Unités de Départ :}\n"
 "\\begin{itemize}\n"
 "  \\item 3 × Unités «Quelques» \\svg{bronze}\n"
 "\\end{itemize}\n"
