--- a/translations/close_to_enemies.tex/de.po
+++ b/translations/close_to_enemies.tex/de.po
@@ -247,13 +247,7 @@ msgstr ""
 
 #. type: multicols
 #: coops/close_to_enemies.tex:31
-#, fuzzy, no-wrap
-#| msgid ""
-#| "\\textbf{Starting Units:}\n"
-#| "\\begin{itemize}\n"
-#| "  \\item 3 × A Few \\svg{bronze} Units\n"
-#| "\\end{itemize}\n"
-#| "\n"
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -263,8 +257,7 @@ msgid ""
 msgstr ""
 "\\textbf{Starteinheiten:}\n"
 "\\begin{itemize}\n"
-"  \\item 3 × \\svg{bronze}-Einheiten auf der \"Wenige\"-Seite\n"
-"\\end{itemize}\n"
+"  \\item Wenige \\svg{bronze}-Einheiten eurer Wahl.\\end{itemize}\n"
 "\n"
 
 #. type: multicols
