--- a/translations/the_hunt.tex/ru.po
+++ b/translations/the_hunt.tex/ru.po
@@ -58,7 +58,7 @@ msgstr ""
 
 #. type: multicols*
 #: coops/sentinels.tex:32 clash/the_hunt.tex:29
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\textbf{Starting Units:}\n"
 "\\begin{itemize}\n"
@@ -69,8 +69,8 @@ msgid ""
 msgstr ""
 "\\textbf{Стартовые отряды:}\n"
 "\\begin{itemize}\n"
-"  \\item «pack» \\svg{bronze} отрядов с \\textit{наименьшей} стоимостью найма\n"
-"  \\item «few» \\svg{bronze} отрядов с \\textit{наибольшей} стоимостью найма\n"
+"  \\item «pack» самых дешёвых \\svg{bronze} отрядов\n"
+"  \\item «few» самых дорогих \\svg{bronze} отрядов\n"
 "\\end{itemize}\n"
 "\n"
 
