--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -70,7 +70,7 @@ Players get VPs for:
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Every Round is a resource Round \textit{(Do not draw Astrologer's cards)}.
+  \item Every Round is a resource Round -- \textit{(do not draw Astrologer's Cards)}.
   \item Players can't attack their opponent's starting Town.
   \item Players can only attack another player once each turn.
   \item Players do not lose gold for losing or retreating from any Combat.
