--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -41,10 +41,10 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
-After Round 6, the player with the most Victory Points (VP) wins.
+At the end of Round 6, the player with the most Victory Points (VP) wins.
 Players get VPs for:
 \begin{itemize}
-  \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is Round number.
+  \item $R-1$ VPs for starting your turn on ``The Hill'', where $R$ is the Round number.
   \item 2 VP for winning a Combat against another player
   \item 1 VP for losing a Combat against another player
 \end{itemize}
@@ -70,7 +70,7 @@ Players get VPs for:
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Players also gain income on even-numbered Rounds.
+  \item Every Round is a resource Round -- \textit{(do not draw Astrologer's Cards)}.
   \item Players can't attack their opponent's starting Town.
   \item Players can only attack another player once each turn.
   \item Players do not lose gold for losing or retreating from any Combat.
@@ -79,8 +79,8 @@ Players get VPs for:
   \item After PvP Combat, both players gain their lost \svg{bronze} and \svg{silver} Units back.
   \item Players may \svg[8]{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
-  \item ``The Hill'' Combat reward: 20 \svg{gold}.
-  \item \textbf{Obelisks:} Search (2) \svg{artifact}. \textit{Visitable once per Faction.}
+  \item ``The Hill'' Combat reward: Recruit one Neutral Unit you defeated for free.
+  \item \textbf{Obelisks:} Search (2) \svg{artifact}.
   \item \textbf{Dragon Utopias:} On Center Map Tile a Hero can spend 1 \svg{movement} to teleport to Dragon Utopia. After Flagging Dragon Utopia, gain 10 \svg{gold} and resolve all rewards from adjacent Fields. You may also recruit one defeated Neutral Unit for free.
 \end{itemize}
 
