--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -76,8 +76,8 @@ Players get VPs for:
   \item Players do not lose gold for losing or retreating from any Combat.
   \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svg{movement}.
   \item After losing a Combat, the defeated Hero is moved to its starting Town.
-  \item After PvP Combat, both players gain their lost \svg{bronze} and \svg{silver} Units back.
-  \item Players may \svg[8]{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
+  \item After PvP Combat, both players gain their lost \svg{bronze} and \svg{silver} Faction Units back.
+  \item On ``The Hill'' Players may \svg[8]{pay_v2} 6 \svg{gold} and 6 \svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item ``The Hill'' Combat reward: Recruit one Neutral Unit you defeated for free.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}.
