Sync glyphs with rewrite

--- a/draft-scenarios/clash/king_of_the_hill.tex
+++ b/draft-scenarios/clash/king_of_the_hill.tex
@@ -77,7 +77,7 @@ Players get VPs for:
   \item Secondary Heroes act as Main Heroes, with full Deck access and 3 \svg{movement}.
   \item After losing a Combat, the defeated Hero is moved to its starting Town.
   \item After PvP Combat, both players gain their lost \svg{bronze} and \svg{silver} Faction Units back.
-  \item The player controlling ``The Hill'' may \svg[8]{pay_v2} 6~\svg{gold} and 6~\svg{building_materials} to gain Walls and Arrow Tower until their next turn.
+  \item The player controlling ``The Hill'' may \svg[8]{pay} 6~\svg{gold} and 6~\svg{building_materials} to gain Walls and Arrow Tower until their next turn.
   \item Level VI and VII Combats cannot be skipped.
   \item ``The Hill'' Combat reward: Recruit one Neutral Unit you defeated for free.
   \item \textbf{Obelisks:} Search (2) \svg{artifact}.
@@ -91,7 +91,7 @@ Players get VPs for:
   \item When a Unit with \svg{defense} is attacked but suffers no \svg{damage}, it gains a Corrosion token. That token is removed when that Unit takes damage.
   \item Additional Trading Post actions:
   \begin{itemize}
-    \item You may Search (2) \svg{artifact} and \svg[8]{pay_v2} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
+    \item You may Search (2) \svg{artifact} and \svg[8]{pay} 6 \svg{gold} for minor, 8 \svg{gold} for major, or 11 \svg{gold} for Relic.
     \item For $2×X+2$ \svg{gold}, you may remove \textbf{any} Card from your hand or discard ($X$is the amount of times you have used this mode).
   \end{itemize}
   \item Split the \svg{artifact} and Spell Decks as depicted in the Tournament Book.
