--- a/draft-scenarios/clash/blood_for_ore.tex
+++ b/draft-scenarios/clash/blood_for_ore.tex
@@ -51,7 +51,7 @@ When a player captures their \nth{6} mine or settlement, all players -- includin
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
   \item A Secondary Hero starting their turn on I or II-III Map Tile gains +1 \svg{movement}.
-  \item \textbf{Obelisk:} Choose one adjacent Visitable Field and gain its reward. \textit{Visitable once per Faction.}
+  \item \textbf{Obelisk:} Choose one adjacent Visitable Field and gain its reward.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
 \end{itemize}
 
